Changes for 1.4.j:

 - The last charactor in last value is unreadable
 - [DEV-48] added scripts form,scripts list, script call menu (Artem)
 - [DEV-49] Support of encoding for monitoring of Windows event logs (Sasha)
 - [DEV-44] more flexible generation of trigger events (Alexei)
 - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
 - added new design of Status of Triggers (Artem)
 - added support of selection of events and bulk acknowledge of events (Artem)
 - added support of log files for {ITEM.LASTVALUE} (Alexei)
 - fixed acknowledgements synchronization (Sasha)
 - fixed appeared error in Latest Data (Artem)
 - fixed problem with equivalence in expressions in Trigger Log Form (Artem)
 - fixed problem with displaying triggers which had been Acknowledged (Artem)
 - changed logical symbol between Expressions (Artem)
 - fixed adding specific symbols to Trigger expression in Trigger Log Form (Artem)
 - added Trigger Log Form (Artem)
 - fixed problem of displaying long Trigger description in js menu (Artem)
 - added JS menu for opening Trigger Log Form in Configuration->items (Artem)
 - fixed error apeared in Monitoring->Events (Artem)
 - fixed displaying "Array" instead of trigger description (Artem)
 - fixed redirection after acknowledge form (Artem) 
 - support ot two additional encodings (cp932, eucjpms) for log file monitoring (Alexei)
 - added synchronisation of last value and timestamp for DM (Alexei)
 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.3:

 - [ZBX-91] added Portuguese translation (Alexei)
 - [ZBX-166] accept SSL peer certificate even if domain name does not match CN (Alexei)